# Jarvis

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_captures.py  0002_capture_status_updated_at.py  0003_captures_status_check.py  0004_ingestion_hash_external_id.py  0005_source_normalized_raw_hash_unique.py  0006_drop_dedup_lookup_index.py
app/: config.py  enums.py  main.py
app/agents/: README.md
app/api/: deps.py
app/api/routes/: capture.py
app/core/: exceptions.py
app/db/: session.py
app/db/models/: __init__.py  capture.py
app/ingestion/: __init__.py  dedup.py
app/integrations/: README.md  openai_capture.py
app/repositories/: capture_repository.py
app/schemas/: capture.py
app/services/: README.md  capture_service.py
app/workers/: README.md
docs/: architecture.md  editing_guide.md  environment.md  product_notes.md
jarvis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_health.py
tests/api/: test_capture.py  test_capture_request_validation.py  test_health.py
tests/db/: test_migration_0005_dedup_unique.py  test_migration_capture_status.py  test_migration_ingestion_columns.py
tests/ingestion/: test_dedup.py
tests/models/: test_capture_schema.py
tests/repositories/: test_capture_repository.py
tests/services/: test_capture_service.py  test_external_id_unique_violation.py
